--- a/ScoreManager/Pages/HomePage.xaml
+++ b/ScoreManager/Pages/HomePage.xaml
@@ -9,6 +9,7 @@
       d:DesignHeight="612" d:DesignWidth="1024"
       Title="HomePage">
     <Grid Background="White">
+        <ProgressBar x:Name="progressBar" Height="30" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Maximum="1000" Foreground="#FF003AFF" Margin="10,572,10,10" />
         <DockPanel LastChildFill="False" VerticalAlignment="Top" Height="65" Margin="10,10,10,0">
             <Image DockPanel.Dock="Left" Height="50" VerticalAlignment="Center" Width="50" Source="/ScoreManager;component/img/btn-dashboard.png"/>
             <TextBlock Text="DASHBOARD" DockPanel.Dock="Left" VerticalAlignment="Center" Margin="10" Style="{StaticResource txtHeader1}"/>
@@ -28,17 +29,17 @@
                 <Button x:Name="btnEmailMultiple" Width="70" BorderBrush="{x:Null}" Background="{x:Null}" Cursor="Hand" IsTabStop="False" Click="BtnEmailMultiple_Click">
                     <StackPanel Orientation="Vertical">
                         <Image Source="/ScoreManager;component/img/btn-send-single.png" Height="40"/>
-                        <TextBlock Text="GROUP EMAIL" VerticalAlignment="Center" TextAlignment="Center" FontFamily="Tw Cen MT Condensed Extra Bold" />
+                        <TextBlock Text="MAIL SCORES" VerticalAlignment="Center" TextAlignment="Center" FontFamily="Tw Cen MT Condensed Extra Bold" />
                     </StackPanel>
                 </Button>
             </StackPanel>
         </DockPanel>
         <TextBlock Text="EXAM / CLASS" VerticalAlignment="Center" Margin="10,100,0,481" Style="{StaticResource txtHeader2}" Height="31" HorizontalAlignment="Left" Width="210"/>
-        <DataGrid x:Name="dgResults" Margin="537,131,10,15" BorderBrush="#FF959595" SelectionMode="Single" RowHeaderWidth="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" IsReadOnly="True" ColumnWidth="*"/>
+        <DataGrid x:Name="dgResults" Margin="537,131,10,45" BorderBrush="#FF959595" SelectionMode="Single" RowHeaderWidth="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" IsReadOnly="True" ColumnWidth="*"/>
         <TextBlock Text="SCORES" VerticalAlignment="Center" Margin="537,100,10,481" Style="{StaticResource txtHeader2}" Height="31"/>
         <TextBlock Text="TERM" VerticalAlignment="Center" Margin="270,100,0,481" Style="{StaticResource txtHeader2}" Height="31" HorizontalAlignment="Left" Width="217"/>
         <Image HorizontalAlignment="Left" Height="44" Margin="492,100,0,0" VerticalAlignment="Top" Width="40" Source="/ScoreManager;component/img/arrow-right.png"/>
-        <DataGrid x:Name="dgExams" BorderBrush="#FF959595" IsReadOnly="True" SelectionMode="Single" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" RowHeaderWidth="0" Margin="10,131,0,15" SelectionChanged="DgExams_SelectionChanged" HorizontalAlignment="Left" Width="210">
+        <DataGrid x:Name="dgExams" BorderBrush="#FF959595" IsReadOnly="True" SelectionMode="Single" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" RowHeaderWidth="0" Margin="10,131,0,45" SelectionChanged="DgExams_SelectionChanged" HorizontalAlignment="Left" Width="210">
             <DataGrid.Columns>
                 <DataGridTextColumn Width="195" Header="EXAM" Binding="{Binding NAME}">
                     <DataGridTextColumn.CellStyle>
@@ -50,7 +51,7 @@
                 </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid x:Name="dgTerms" BorderBrush="#FF959595" IsReadOnly="True" SelectionMode="Single" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" RowHeaderWidth="0" Margin="270,131,0,15" HorizontalAlignment="Left" Width="217" SelectionChanged="DgTerms_SelectionChanged">
+        <DataGrid x:Name="dgTerms" BorderBrush="#FF959595" IsReadOnly="True" SelectionMode="Single" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" RowHeaderWidth="0" Margin="270,131,0,45" HorizontalAlignment="Left" Width="217" SelectionChanged="DgTerms_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn Width="200" Header="TERM" Binding="{Binding TERM}">
                     <DataGridTextColumn.CellStyle>
@@ -63,5 +64,6 @@
             </DataGrid.Columns>
         </DataGrid>
         <Image HorizontalAlignment="Left" Height="44" Margin="225,100,0,0" VerticalAlignment="Top" Width="40" Source="/ScoreManager;component/img/arrow-right.png"/>
+        <TextBlock x:Name="txtSendStatus" Margin="10,572,10,0" TextWrapping="Wrap" VerticalAlignment="Top" TextAlignment="Center" Height="30" Padding="0,7,0,0"/>
     </Grid>
 </Page>
