--- a/ScoreManager/Pages/SettingsPage.xaml
+++ b/ScoreManager/Pages/SettingsPage.xaml
@@ -58,30 +58,33 @@
         <TextBlock HorizontalAlignment="Left" Margin="698,239,0,0" TextWrapping="Wrap" Text="Laab, Charles Daniel, CPE 4" VerticalAlignment="Top" FontStyle="Italic" Width="277"/>
         <Separator HorizontalAlignment="Left" Height="44" Margin="633,260,0,0" VerticalAlignment="Top" Width="342"/>
         <Grid Margin="10,95,417,10" Background="Gainsboro">
-            <TextBlock HorizontalAlignment="Left" Style="{StaticResource txtHeader3}" Margin="10,10,0,0" TextWrapping="Wrap" Text="EMAIL SETTINGS" VerticalAlignment="Top"/>
-            <xctk:WatermarkTextBox Watermark="Email must be @gmail.com" HorizontalAlignment="Left" Height="27" Margin="81,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="275"/>
-            <TextBlock HorizontalAlignment="Left" Margin="10,55,0,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="EMAIL: " VerticalAlignment="Top"/>
-        </Grid>
-        <Grid Margin="10,95,417,10" Background="Gainsboro">
             <TextBlock HorizontalAlignment="Left" Style="{StaticResource ResourceKey=txtHeader3}" Margin="10,10,0,0" TextWrapping="Wrap" Text="EMAIL SETTINGS" VerticalAlignment="Top"/>
-            <xctk:WatermarkTextBox x:Name="tbEmailAddress" Watermark="Email address must be using @gmail.com" Height="27" Margin="154,55,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-            <TextBlock Margin="10,55,448,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="Email Address: " VerticalAlignment="Top"/>
-            <TextBlock Margin="10,87,448,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="Password: " VerticalAlignment="Top"/>
-            <xctk:WatermarkPasswordBox x:Name="tbPassword" Watermark="Enter the password for the email above." Height="27" Margin="154,87,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-            <TextBlock Margin="10,119,448,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="Email Footer: " VerticalAlignment="Top"/>
-            <Button x:Name="btnSave" BorderBrush="{x:Null}" Background="{x:Null}" Cursor="Hand" Click="BtnSave_Click" Margin="517,358,10,84">
+            <xctk:WatermarkTextBox x:Name="tbEmailAddress1" Watermark="@gmail.com" Height="27" Margin="154,100,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <TextBlock Margin="10,100,448,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="Email Address: " VerticalAlignment="Top"/>
+            <TextBlock Margin="10,132,448,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="Password: " VerticalAlignment="Top"/>
+            <xctk:WatermarkPasswordBox x:Name="tbPassword1" Watermark="Enter the password for the email above." Height="27" Margin="154,132,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <TextBlock Margin="10,300,448,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="Email Footer: " VerticalAlignment="Top"/>
+            <Button x:Name="btnSave" BorderBrush="{x:Null}" Background="{x:Null}" Cursor="Hand" Click="BtnSave_Click" Margin="517,432,10,10">
                 <StackPanel Orientation="Vertical">
                     <Image Source="/ScoreManager;component/img/btn-save.png" Height="40"/>
                     <TextBlock Text="SAVE" VerticalAlignment="Center" TextAlignment="Center" FontFamily="Tw Cen MT Condensed Extra Bold" />
                 </StackPanel>
             </Button>
-            <RichTextBox x:Name="tbFooter" Height="234" Margin="154,119,10,0" VerticalAlignment="Top">
+            <RichTextBox x:Name="tbFooter" Height="127" Margin="154,300,10,0" VerticalAlignment="Top">
                 <FlowDocument>
                     <Paragraph>
                         <Run Text=""/>
                     </Paragraph>
                 </FlowDocument>
             </RichTextBox>
+            <Separator Height="20" Margin="10,42,10,0" VerticalAlignment="Top"/>
+            <xctk:WatermarkTextBox x:Name="tbEmailAddress2" Watermark="@mymail.mapua.edu.ph or @mapua.edu.ph" Height="27" Margin="154,211,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <TextBlock Margin="10,211,448,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="Email Address: " VerticalAlignment="Top"/>
+            <TextBlock Margin="10,243,448,0" Style="{StaticResource txtNormal}" TextWrapping="Wrap" Text="Password: " VerticalAlignment="Top"/>
+            <xctk:WatermarkPasswordBox x:Name="tbPassword2" Watermark="Enter the password for the email above." Height="27" Margin="154,243,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <Separator Height="20" Margin="10,275,10,0" VerticalAlignment="Top"/>
+            <RadioButton x:Name="rbGmail" Content="GMAIL" HorizontalAlignment="Left" Margin="10,63,0,0" VerticalAlignment="Top" FontFamily="Impact" FontSize="18" Width="122" Padding="5,5,0,5"/>
+            <RadioButton x:Name="rbMapuaMail" Content="MAPUA MAIL" HorizontalAlignment="Left" Margin="10,174,0,0" VerticalAlignment="Top" FontFamily="Impact" FontSize="18" Width="122" Padding="5,5,0,5"/>
         </Grid>
     </Grid>
 </Page>
