--- a/ScoreManager/SubWindows/DeactivateWindow.xaml
+++ b/ScoreManager/SubWindows/DeactivateWindow.xaml
@@ -6,18 +6,18 @@
         xmlns:local="clr-namespace:ScoreManager.SubWindows"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="Deactivate License" Height="225" Width="438.665" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Deactivate License" Height="211.176" Width="438.665" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" Height="63" Margin="10,10,10,0" Stroke="Black" VerticalAlignment="Top"/>
 
-        <xctk:WatermarkTextBox x:Name="tbLicense" Watermark="Enter License Key" Height="27" Margin="201,93,10,0" VerticalAlignment="Top"/>
+        <xctk:WatermarkTextBox x:Name="tbLicense" Watermark="Enter License Key" Height="27" Margin="215,93,10,0" VerticalAlignment="Top" CharacterCasing="Upper"/>
         <TextBlock HorizontalAlignment="Left" Margin="22,23,0,0" TextWrapping="Wrap" Text="LICENSED TO  : " VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="22,43,0,0" TextWrapping="Wrap" Text="EMAIL  : " VerticalAlignment="Top"/>
         <TextBlock x:Name="txtLicense" HorizontalAlignment="Left" Margin="120,23,0,0" TextWrapping="Wrap" Text="&lt;&gt;" VerticalAlignment="Top"/>
         <TextBlock x:Name="txtEmail" HorizontalAlignment="Left" Margin="120,43,0,0" TextWrapping="Wrap" Text="&lt;&gt;" VerticalAlignment="Top"/>
-        <TextBlock  Style="{StaticResource txtNormal}" Margin="10,93,232,0" TextWrapping="Wrap" Text="DEACTIVATE LICENSE" VerticalAlignment="Top"/>
-        <Button x:Name="btnDeactivate" Content="Deactivate" Margin="324,140,10,0" VerticalAlignment="Top" Style="{StaticResource btnRed}" Height="27" Click="BtnDeactivate_Click"/>
-        <Button x:Name="btnCancel" Content="Cancel" Margin="10,140,324,0" VerticalAlignment="Top" Style="{StaticResource btnNormal}" Height="27" IsCancel="True"/>
+        <TextBlock  Style="{StaticResource txtNormal}" Margin="10,93,0,0" TextWrapping="Wrap" Text="DEACTIVATE LICENSE" VerticalAlignment="Top" HorizontalAlignment="Left" Width="205"/>
+        <Button x:Name="btnDeactivate" Content="Deactivate" Margin="324,130,10,0" VerticalAlignment="Top" Style="{StaticResource btnRed}" Height="27" Click="BtnDeactivate_Click"/>
+        <Button x:Name="btnCancel" Content="Cancel" Margin="10,130,324,0" VerticalAlignment="Top" Style="{StaticResource btnNormal}" Height="27" IsCancel="True"/>
 
     </Grid>
 </Window>
